2018-05-18  Mark Wielaard  <mark@klomp.org>

	* dwarf_formudata.c (__libdw_formptr): Handle the special case
	of IDX_debug_ranges for DW_UT_split_compile with version < 5.
	* dwarf_highpc.c (dwarf_highpc): Use dwarf_lowpc, check for
	split compile cudie.
	* dwarf_lowpc.c (dwarf_lowpc): Check for split compile cudie.
	* dwarf_ranges.c (dwarf_ranges): Switch cu and sectiondata for
	split compile units.
	* libdwP.h (struct Dwarf_CU): Add ranges_base field.
	(__libdw_cu_ranges_base): New static inline function.

2018-05-18  Mark Wielaard  <mark@klomp.org>

	* libdw_findcu.c (__libdw_intern_next_unit): Init files to NULL.
	* dwarf_getsrclines.c (dwarf_getsrclines): Handle split units by
	taking the line table from the skeleton.
	* dwarf_getsrcfiles.c (dwarf_getsrcfiles): Handle split units by
	only taking the files from .debug_line offset zero (if it exists),
	otherwise fall back to the skeleton.

2018-05-17  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (__libdw_debugdir): New function.
	(valid_p): Call __libdw_debugdir.
	* dwarf_end.c (dwarf_end.c): Free debugdir.
	* dwarf_getalt.c (__libdw_filepath): Extract __libdw_debugdir logic.
	take debugdir as argument instead of fd.
	(find_debug_altlink): Call __libdw_filepath with debugdir.
	* libdwP.h (struct Dwarf): Add debugdir field.
	(__libdw_debugdir): New function prototype.
	(__libdw_filepath): Adjust prototype to take a const char * instead of
	an int.
	* libdw_find_split_unit.c (__libdw_find_split_unit): Call
	__libdw_filepath with debugdir.

2018-05-17  Mark Wielaard  <mark@klomp.org>

	* dwarf_attr_integrate.c (dwarf_attr_integrate): Handle split_compile
	unit DIE, search skeleton_compile unit DIE.
	* dwarf_hasattr_integrate.c (dwarf_hasattr_integrate): Likewise.
	* libdwP.h (is_cudie): Check cu is not NULL.

2018-05-19  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (__libdw_find_split_unit): Mark as internal_function.

2018-05-15  Mark Wielaard  <mark@klomp.org>
