@@ -37,11 +37,12 @@ die: world.c (11)
  400500..400567
 
 die: happy (1d)
- 8009e0..8009ff
- 8008e0..8008f7
+ 40051c..400526
+ 400530..400534
+ 400535..40053f
 
 die: sad (1d)
- 400530..400534
+ 40051c..400526
  400535..40053f
 
 EOF
